# hls-bug-error-directive

./: CHANGELOG.md  LICENSE  hls-bug-error-directive.cabal
app/: Another.hs  Main.hs
