cabal-version:      3.4
name:               hls-bug-error-directive
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tsvetan Ovedenski
maintainer:         dev@tsovedenski.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hls-bug-error-directive
    import:           warnings
    main-is:          Main.hs
    other-modules:    Another
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: GHC2021
